Simplify BM